--- a/src/components/ExerciseGoalCard/index.css
+++ b/src/components/ExerciseGoalCard/index.css
@@ -16,6 +16,7 @@
 @media (min-width: 600px) {
   div#exerciseCard.ExerciseGoalCard-root-128 {
     margin: 5% 4% -1% 4%;
+    color: "pink";
   }
 
   div.ExerciseGoalCard-progressColor-140 {
@@ -23,5 +24,6 @@
     margin-left: 26%;
     margin-right: 26%;
     margin-bottom: 28px;
+    color: "pink";
   }
 }
